<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">نور سوريا</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="mosque_name">إسم الجامع :</string>
    <string name="janaez_number">عدد الجنائز :</string>
    <string name="please_wait">الرجاء الانتظار...</string>
    <string name="janaez">جنائز</string>
    <string name="day">اليوم :</string>
    <string name="date">التاريخ :</string>
    <string name="prayer">صلاة :</string>
    <string name="name">الاسم :</string>
    <string name="gender">الجنس :</string>
    <string name="added_to_fav">تمت إضافة الحديث إلى المفضلة</string>
    <string name="removed_from_fav">تم حذف الحديث من المفضلة</string>
    <string name="to_search">ابحث على</string>
    <string name="we_found">تم العثور على</string>
    <string name="no_hadith_found">لم يتم العثور على أي حديث يحتوي على</string>
    <string name="hadith">حديث</string>
    <string name="share">شارك</string>
    <string name="already_exist">ملف الصوت موجود</string>
    <string name="download_success">تم تحميل الحديث بنجاح</string>
    <string name="download_error">خطا في تحميل الحديث، حاول لاحقاً</string>
    <string name="download_running">جاري تحميل الحديث</string>
    <string name="preparing_audio">جاري تحضير الحديث</string>
    <string name="error_internet_connexion">تأكد من الاتصال بالانترنت</string>
    <string name="comment_name">العنوان :</string>
    <string name="comment_email">الإيميل :</string>
    <string name="comment_country">المدينة :</string>
    <string name="comment_text">التعليق :</string>
    <string name="please_fill">الرجاء ملء كل الفراغات</string>
    <string name="empty_list">قائمة فارغة</string>
    <string name="amaken">إختر المدينة</string>
    <string name="wait_other_download">الرجاء الانتظار... جاري تحميل حديث أخر</string>
    <string name="comments">التعليقات</string>
    <string name="remove">حذف</string>
    <string name="update">تحديث</string>
    <string name="modifications">تعديل التعليق</string>
    <string name="select_place">الرجاء إختيار مدينة</string>
    <string name="online_on">تم تفعيل التواصل مع الأنترنت</string>
    <string name="online_off">تم إيقاف التواصل مع الأنترنت</string>
    <string name="request_online_mode">يجب تفعيل الوضع المتواصل مع الأنترنت</string>
    <string name="ok">موافق</string>
    <string name="cancel">إلغاء</string>
    <string name="show_more">المزيد...</string>
    <string name="comments_title">تعليقات القراء</string>
    <string name="add">أضف</string>
    <string name="fill_empty_data">الرجاء ملء الفراغات</string>
    <string name="comment_added">تمت إضافة التعليق بنجاح</string>
    <string name="comment_not_added">لم يتم إضافة التعليق</string>
    <string name="no_diaries">لا توجد يوميات لهذا التاريخ</string>
    <string name="no_comments">لا يوجد تعاليق</string>
    <string name="lorem_ipsum">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l\'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n\'a pas fait que survivre cinq siècles, mais s\'est aussi adapté à la bureautique informatique, sans que son contenu n\'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</string>
    <string name="text_about">بسم الله الرحمن الرحيم</string>
    <string name="medias_library">مكتبة الوسائط</string>
    <string name="menu_writers">صفحات الكتاب</string>
    <string name="menu_files">ملفات</string>
    <string name="menu_polls">استطلاعات</string>
    <string name="previous_polls">استطلاعات سابقة</string>
    <string name="problem">مشكل !</string>
    <string name="please_retry">الرجاء إعادة المحاولة</string>
    <string name="problem_vote">التصويت لم يتم</string>
    <string name="success_vote">تم التصويت بنجاح !</string>
    <string name="choice_vote">الرجاء إختيار الاقتراح المراد التصويت له</string>
    <string name="old_comments">التعليقات السابقة</string>
    <string name="add_comment">إضافة تعليق جديد</string>
    <string name="send_comment">إرسال التعليق</string>
    <string name="isdownloading">جاري التحميل...</string>
    <string name="download_successful">تم التحميل بنجاح !</string>
    <string name="hint_search">أدخل كلمة البحث</string>

</resources>