<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/rounded_background"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            android:text="@string/comment_name"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_country"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/rounded_background"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txv_country"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            android:text="@string/comment_country"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/rounded_background"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txv_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            android:text="@string/comment_email"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/rounded_background"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txv_comment"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            android:text="@string/comment_text"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" 
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@android:color/white"
            style="@android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" 
            android:text="@string/add"
            android:gravity="center"
            android:textColor="@android:color/white"
            style="@android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>