<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.2"
                android:background="@drawable/rounded_background"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@android:color/black" 
                android:nextFocusDown="@+id/edt_email"
           		android:imeOptions="actionNext"
           		android:textSize="14sp"
           		android:singleLine="true"/>

            <TextView
                android:id="@+id/txv_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.8"
                android:text="@string/comment_name"
                android:textColor="@color/dark_slate_gray"
                android:textSize="14sp" 
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/edt_country"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.2"
                android:background="@drawable/rounded_background"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@android:color/black" 
                android:textSize="14sp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/txv_country"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.8"
                android:text="@string/comment_country"
                android:textColor="@color/dark_slate_gray"
                android:textSize="14sp" 
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.2"
                android:background="@drawable/rounded_background"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@android:color/black" 
                android:nextFocusDown="@+id/edt_comment"
            	android:imeOptions="actionNext"
            	android:textSize="14sp"
            	android:singleLine="true"
            	android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/txv_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.8"
                android:text="@string/comment_email"
                android:textColor="@color/dark_slate_gray" 
                android:textSize="14sp"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edt_comment"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="0.2"
                android:background="@drawable/rounded_background"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@android:color/black"
            	android:imeOptions="actionDone"
            	android:textSize="14sp" />

            <TextView
                android:id="@+id/txv_comment"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0.8"
                android:text="@string/comment_text"
                android:textColor="@color/dark_slate_gray"
                android:textSize="14sp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            style="@android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_add"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:text="@string/send_comment"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>
        
        <View android:layout_width="match_parent"
            android:layout_height="10dp"/>
    </LinearLayout>

</ScrollView>